Fix Header Background on IE 6

--- a/WebContent/css/audit.css
+++ b/WebContent/css/audit.css
@@ -573,6 +573,7 @@ table.osha tfoot th {
 	letter-spacing: normal;
 	font-size: 24px;
 	line-height: 28px;
+	zoom: 1;
 }
 
 .audit_category .info {
